[package]
name = "keystream"
version = "1.0.0"
authors = ["Peter Reid <peter.d.reid@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Cryptographic keystream traits"
repository = "https://github.com/PeterReid/keystream"
documentation = "http://peterreid.github.io/keystream"
keywords = ["keystream"]